<resources>
    <string name="app_name">Team Sports</string>


    <string name="status_init">Preparing...</string>
    <string name="status_incorrect_url">URL is invalid</string>
    <string name="status_ok">Time fetched</string>
    <string name="status_error">Error fetching time</string>
    <string name="status_connecting">Connecting to server...</string>
    <string name="status_not_connected">Please activate net connectivity</string>
    <string name="menu_principal">Menú Principal</string>
    <string name="nombre_plato">Nombre del plato:</string>
    <string name="precio">Precio(€):</string>
    <string name="crear_plato">Crear plato</string>
    <string name="cuenta_mesa">Cuenta Mesa</string>
    <string name="seleccion_mesa">Seleccione una mesa</string>
    <string name="seleccion_plato_eliminar">Seleccione el plato a eliminar</string>
    <string name="listar_menu">Listar Menú</string>
    <string name="seleccion_plato_modificar">Seleccione el plato a modificar</string>
    <string name="guardar">Guardar cambios</string>
    <string name="opciones">Opciones</string>
    <string name="mesas">Mesas</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_bebida">Nombre Bebida:</string>
    <string name="cantidad">Cantidad</string>
    <string name="confirmar">Confirmar</string>
    <string name="nombre_postre">Nombre Postre:</string>
    <string name="anadir_bebida">Añadir Bebida</string>
    <string name="anadir_postre">Añadir Postre</string>
    <string name="anadir_plato">Añadir Plato</string>
    <string name="producto">Producto:</string>
    <string name="creado">\nRoman - Iago - Yvan</string>
    <string name="back_page">Atras</string>
    <string name="forward_page">Adelante</string>
    <string name="start">Start Music</string>
    <string name="stop">Stop Music</string>
    <string name="music">Musica</string>
</resources>
