<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/myLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/img02"
                android:padding="4dp" >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_x="1dp" android:layout_y="10dp"
            android:gravity="center_vertical|center_horizontal">
        <TextView
                android:id="@+id/AppName"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_x="102dp"
                android:layout_y="41dp"
                android:text="@string/app_name"
                android:textColor="#ffff8c0d"
                android:textSize="25sp"
                android:textStyle="bold" android:typeface="serif"/>
        <TextView
                android:id="@+id/authors"
                android:layout_width="63dp"
                android:layout_height="91dp"
                android:layout_x="151dp"
                android:layout_y="94dp"
                android:text="@string/creado"
                android:textColor="#ffff8c0d"
                android:textSize="16sp"
                android:textStyle="normal" android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:layout_weight="0.34" android:gravity="center_vertical|center_horizontal"
                  android:layout_x="1dp" android:layout_y="220dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="0:00:00"
                  android:id="@+id/lblTime" android:textStyle="bold" android:layout_gravity="center_horizontal"
                  android:textIsSelectable="true" android:textColor="#ff00ff16"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="N/A"
                  android:id="@+id/lblTimeZoneInfo" android:textColor="#ff00ff16"
                  android:layout_gravity="center_horizontal"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium" android:text="N/A"
                  android:id="@+id/lblGmtInfo" android:textColor="#ff00ff16"
                  android:layout_gravity="center_horizontal"/>
        <TextView android:layout_width="wrap_content" android:layout_height="34dp"
                  android:textAppearance="?android:attr/textAppearanceSmall" android:text="Esperando..."
                  android:id="@+id/lblStatus" android:layout_x="148dp" android:layout_y="253dp"
                  android:textColor="#ff00ff16" android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="61dp" android:layout_x="1dp" android:layout_y="456dp"
            android:gravity="center_vertical|center_horizontal">
        <Button
                android:id="@+id/btn"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:layout_x="91dp"
                android:layout_y="459dp"
                android:text="@string/menu_principal"
                android:textStyle="normal|bold" android:visibility="visible" android:typeface="monospace"/>
    </LinearLayout>

</AbsoluteLayout>